<resources>
    <string name="app_name">MyNews</string>
    <string name="app_time">yyyy-MM-dd HH-mm-ss</string>
    <string name="netWork_not">当前网络不可用</string>
    <string name="netWork_mobile">正在使用2G/3G/4G网络</string>
    <string name="netWork_wireless_stop">无线网络已断开</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="loginmenu_problem">遇到问题？</string>
    <string name="loginmenu_loginNow">立即登录</string>

    <string name="main_title_information">资讯</string>
    <string name="main_title_myRead">我的收藏</string>
    <string name="main_title_local">本地缓存</string>
    <string name="main_title_replay">我的回复</string>
    <string name="main_title_pic">图片</string>
    <string name="main_personal_center">进入个人中心</string>

    <string name="menu_bar_news">新闻</string>
    <string name="menu_bar_read">收藏</string>
    <string name="menu_bar_local">本地</string>
    <string name="menu_bar_reply">回复</string>
    <string name="menu_bar_pic">图片</string>

    <string name="fragment_login_login">登录</string>
    <string name="fragment_login_register">注册</string>
    <string name="fragment_login_account_number">请输入账号</string>
    <string name="fragment_login_password">请输入密码</string>
    <string name="fragment_login_password_again">请确认密码</string>
    <string name="fragment_login_emails">请输入邮箱</string>
    <string name="fragment_login_lost">忘记密码</string>
    <string name="fragment_login_error">账号密码错误！</string>
    <string name="fragment_login_error_2password">两次密码不匹配！</string>
    <string name="fragment_login_error_account">账号格式错误！</string>
    <string name="fragment_login_error_password">密码格式错误！</string>
    <string name="fragment_login_error_emails">邮箱格式错误！</string>


    <string name="horizontal_item_name">类型</string>

    <string name="news_title_item_title">标题</string>
    <string name="news_title_item_details">新闻内容</string>
    <string name="news_title_item_time">时间</string>

    <string name="fragment_news_headline">新闻大标题</string>
    <string name="fragment_news_date">时间戳</string>
    <string name="fragment_news_picDescribe">新闻图片描述</string>
    <string name="fragment_news_details">新闻详细内容</string>

</resources>
