<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="65dp">
        <ImageView
            android:id="@+id/iv_title_picture"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_title_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="18dp"
                android:text="@string/news_title_item_title"/>
            <TextView
                android:id="@+id/tv_title_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/news_title_item_details"/>
            <TextView
                android:id="@+id/tv_title_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:maxLines="1"
                android:textSize="10dp"
                android:text="@string/news_title_item_time"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>